--- a/app/src/main/res/xml/settings.xml
+++ b/app/src/main/res/xml/settings.xml
@@ -45,4 +45,13 @@
             android:title="@string/settings_scan_orientation_lock_title" />
     </PreferenceCategory>
 
+
+    <PreferenceCategory android:title="@string/settings_category_structures">
+        <SwitchPreference
+            android:defaultValue="false"
+            android:key="@string/structures_buildings_initial_closed_id"
+            android:summary="@string/structures_buildings_initial_closed_summary"
+            android:title="@string/structures_buildings_initial_closed_title" />
+    </PreferenceCategory>
+
 </PreferenceScreen>
