--- a/app/src/main/res/menu/main_toolbar.xml
+++ b/app/src/main/res/menu/main_toolbar.xml
@@ -1,7 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android"
+<menu xmlns:tools="http://schemas.android.com/tools"
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
+    <item
+        android:id="@+id/toolButtonSetDate"
+        android:title="@string/placeholder"
+        app:showAsAction="ifRoom"
+        tools:title="DATE" />
     <item
         android:id="@+id/toolButtonSync"
         android:icon="@drawable/ic_sync"
