--- a/app/src/main/res/menu/main_toolbar.xml
+++ b/app/src/main/res/menu/main_toolbar.xml
@@ -5,8 +5,9 @@
 
     <item
         android:id="@+id/toolButtonSetDate"
+        android:icon="@drawable/ic_date"
         android:title="@string/placeholder"
-        app:showAsAction="ifRoom"
+        app:showAsAction="ifRoom|withText"
         tools:title="DATE" />
     <item
         android:id="@+id/toolButtonSync"
