--- a/app/src/main/res/values/messages.xml
+++ b/app/src/main/res/values/messages.xml
@@ -10,4 +10,5 @@
     <string name="message_unknown_employee">Unknown employee</string>
     <string name="message_unsupported_qrcode">Unsupported QR Code</string>
     <string name="message_press_back_again_to_exit">Press back button again to exit</string>
+    <string name="message_marked_timestamp_as_untransmitted">Marked timestamp as untrasmitted</string>
 </resources>
