Added description and transmission status for Service Activities

--- a/app/src/main/res/layout/structures_building_item.xml
+++ b/app/src/main/res/layout/structures_building_item.xml
@@ -5,6 +5,19 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
+    <ImageView
+        android:id="@+id/transmissionImage"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginBottom="8dp"
+        android:contentDescription="@string/transmission_status"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:srcCompat="@drawable/ic_timestamp_transmitted" />
+
     <TextView
         android:id="@+id/roomView"
         android:layout_width="0dp"
@@ -25,11 +38,20 @@
         android:layout_width="200dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
-        tools:text="Button"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintEnd_toStartOf="@+id/noteButton"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:text="Button" />
+
+    <ImageButton
+        android:id="@+id/noteButton"
+        android:layout_width="wrap_content"
+        android:layout_height="0dp"
+        android:contentDescription="@string/description"
+        app:layout_constraintBottom_toBottomOf="@+id/serviceButton"
+        app:layout_constraintEnd_toStartOf="@+id/transmissionImage"
+        app:layout_constraintTop_toTopOf="@+id/serviceButton"
+        tools:srcCompat="@drawable/ic_note" />
 
 </android.support.constraint.ConstraintLayout>
