--- a/app/src/main/res/values/messages.xml
+++ b/app/src/main/res/values/messages.xml
@@ -13,4 +13,5 @@
     <string name="message_marked_timestamp_as_untransmitted">Marked timestamp as untrasmitted</string>
     <string name="message_marked_activity_as_untransmitted">Marked activity as untrasmitted</string>
     <string name="message_unable_to_change_transmitted_activity">Unable to modify an already transmitted activity</string>
+    <string name="message_unable_to_use_disabled_contract">Unable to use a disabled contract</string>
 </resources>
