--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,6 +3,8 @@
     <color name="colorPrimary">#3C3838</color>
     <color name="colorPrimaryDark">@color/colorPrimary</color>
     <color name="colorAccent">#3D3D3D</color>
+    <color name="colorError">#CF1D02</color>
+    <color name="colorLoading">#8BC6FF</color>
 
     <color name="color_simple_list_item_activated">#E64A19</color>
     <color name="color_simple_list_item_selected">@color/color_simple_list_item_activated</color>
