--- a/app/src/main/res/values/messages.xml
+++ b/app/src/main/res/values/messages.xml
@@ -2,11 +2,6 @@
 <resources>
     <string name="message_missing_tablet_id">Missing Tablet ID, please set it in the settings before the use</string>
     <string name="message_missing_tablet_key">Missing Tablet key, please set it in the settings before the use</string>
-    <string name="message_no_server_connection">Unable to establish connection with the server, please check your internet connection</string>
-    <string name="message_invalid_date_time">Invalid date or time, please check system settings</string>
-    <string name="message_unable_to_download">Unable to download data from the server</string>
-    <string name="message_invalid_server_response">Invalid response from the server, please check your internet connection</string>
-    <string name="message_established_connection">Established connection with the server</string>
     <string name="message_unknown_employee">Unknown employee</string>
     <string name="message_unsupported_qrcode">Unsupported QR Code</string>
     <string name="message_press_back_again_to_exit">Press back button again to exit</string>
@@ -15,4 +10,15 @@
     <string name="message_unable_to_change_transmitted_activity">Unable to modify an already transmitted activity</string>
     <string name="message_unable_to_use_contract">Unable to use the contract</string>
     <string name="message_select_a_service_room">Select a service for the room</string>
+
+    <!-- Sync section -->
+    <string name="sync_step_started">Synchronization started</string>
+    <string name="sync_step_transmit_timestamps">Transmit timestamps</string>
+    <string name="sync_step_transmit_activities">Transmit activities</string>
+    <string name="sync_step_downloading">Downloading data</string>
+    <string name="sync_step_completed">Synchronization completed</string>
+    <string name="sync_error_no_server_connection">Unable to establish connection with the server, please check your internet connection</string>
+    <string name="sync_error_invalid_date_time">Invalid date or time, please check system settings</string>
+    <string name="sync_error_unable_to_download">Unable to download data from the server</string>
+    <string name="sync_error_invalid_server_response">Invalid response from the server, please check your internet connection</string>
 </resources>
