--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -20,6 +20,7 @@
     <color name="color_buildings_background">#689F38</color>
 
     <color name="color_rooms_background">#DCEDC8</color>
+    <color name="color_rooms_background_already_assigned">#FF7070</color>
 
     <color name="action_enter">#7AE400</color>
     <color name="action_exit">#FA3333</color>
