Added service present icon next to the room name

--- a/app/src/main/res/layout/structures_building_item.xml
+++ b/app/src/main/res/layout/structures_building_item.xml
@@ -6,15 +6,15 @@
     android:layout_height="wrap_content">
 
     <ImageView
-        android:id="@+id/transmissionImage"
+        android:id="@+id/servicePresentImage"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
         android:contentDescription="@string/scan_transmission_status"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:srcCompat="@drawable/ic_timestamp_transmitted" />
 
@@ -29,7 +29,7 @@
         android:textSize="17sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/serviceButton"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/servicePresentImage"
         app:layout_constraintTop_toTopOf="parent"
         tools:text="ITEM" />
 
@@ -53,5 +53,18 @@
         app:layout_constraintEnd_toStartOf="@+id/transmissionImage"
         app:layout_constraintTop_toTopOf="@+id/serviceButton"
         tools:srcCompat="@drawable/ic_note" />
+
+    <ImageView
+        android:id="@+id/transmissionImage"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginBottom="8dp"
+        android:contentDescription="@string/scan_transmission_status"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:srcCompat="@drawable/ic_timestamp_transmitted" />
 
 </android.support.constraint.ConstraintLayout>
